As a user i can login/logout [Delivers #179621128]
