# index.js
@@ -6,7 +6,6 @@ const yamljs = require('yamljs')
 const swaggerDocument = yamljs.load('docs/swagger.yaml')
 
 
-
 require('dotenv').config()
 
 // Serve API documentation on /docs
@@ -18,6 +17,7 @@ app.use(express.json())
 
 // /users endpoints
 app.use('/users', require('./routes/users'))
+app.use('/sessions', require('./routes/sessions'))
 
 mongoose.connect(process.env.MONGODB_URI, {}, function () {
     console.log('Connected to mongoDB')
